--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "ext-data/ctfs"]
-	path = ext-data/ctfs
+[submodule "content/ctfs"]
+	path = content/ctfs
 	url = git@github.com:alem0lars/ctfs
