--- a/theme/static/bower.json
+++ b/theme/static/bower.json
@@ -1,13 +1,13 @@
 {
-  "name": "repr",
+  "name": "theme",
   "version": "0.0.1",
   "authors": [
-    "Greizgh <greizgh@ephax.org>"
+    "Alessandro Molari <molari.alessandro@gmail.com>"
   ],
   "description": "Pelican theme",
   "license": "MIT",
   "private": true,
   "dependencies": {
-    "materialize": "~0.96.0"
+    "materialize": "~0.97.5"
   }
 }
