--- a/package.json
+++ b/package.json
@@ -5,6 +5,31 @@
   "author": "Alessandro Molari",
   "license": "Apache-2.0",
   "devDependencies": {
-    "bower": "^1.7.7"
+    "babel-core": "^6.5.2",
+    "babel-loader": "^6.2.3",
+    "babel-plugin-transform-runtime": "^6.5.2",
+    "babel-preset-es2015": "^6.5.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-runtime": "^6.5.0",
+    "babelify": "^7.2.0",
+    "css-loader": "^0.23.1",
+    "exports-loader": "^0.6.3",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.8.5",
+    "imports-loader": "^0.6.5",
+    "node-sass": "^3.4.2",
+    "resolve-url-loader": "^1.4.3",
+    "sass-loader": "^3.1.2",
+    "style-loader": "^0.13.0",
+    "url-loader": "^0.5.7",
+    "webpack": "^1.12.13"
+  },
+  "dependencies": {
+    "jquery": "^2.2.0",
+    "lunr": "^0.6.0",
+    "materialize-css": "^0.97.5",
+    "react": "^0.14.7",
+    "react-dom": "^0.14.7",
+    "sizzle": "^2.3.0"
   }
 }
