--- a/data/site.yml
+++ b/data/site.yml
@@ -1,5 +1,5 @@
-title: alem0lars blog
-description: alem0lars personal blog
+title: alem0lars website
+description: Collection of development/hacking content published by alem0lars
 url: http://alem0lars.anapnea.net
 keywords:
   - portfolio
